--- a/package.json
+++ b/package.json
@@ -4,15 +4,44 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
+    "@expo/metro-runtime": "~3.2.3",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/cli-server-api": "^15.0.0",
+    "@react-native-community/datetimepicker": "^8.0.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/slider": "^4.5.2",
+    "@react-native-firebase/app": "^21.3.0",
+    "@react-native-firebase/firestore": "^21.3.0",
+    "@react-native-picker/picker": "^2.7.5",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "expo": "~51.0.38",
+    "expo-auth-session": "~5.5.2",
+    "expo-av": "~14.0.7",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-random": "~14.0.1",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "expo-web-browser": "~13.0.3",
+    "firebase": "^8.10.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-dom": "18.2.0",
+    "react-native": "^0.74.5",
+    "react-native-animatable": "^1.4.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
