--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "emotive",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -22,7 +21,7 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.38",
+    "expo": "^51.0.39",
     "expo-auth-session": "~5.5.2",
     "expo-av": "~14.0.7",
     "expo-linear-gradient": "~13.0.2",
@@ -33,7 +32,7 @@
     "firebase": "^8.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.74.5",
+    "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
